--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="item" style="background-image: url(Image/3.jpg);">
                 <div class="content">
                     <div class="title"> 3rd photo</div>
-                    <div class="description">tu light ke  niche hai yea light?✨🌙 yea lights bhi tere se competition me har jayegi lagta hai</div>
+                    <div class="description" style="color: rgb(69, 207, 232)">light tere upar pad raha hai yea tu light ke upar?✨🌙 yea lights bhi tere se competition me har jayegi lagta hai</div>
                     <button>See Detail</button>
                 </div>
             </div>
