--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="item" style="background-image: url(Image/4.jpg);">
                 <div class="content">
-                    <div class="title"> traditional beauty </div>
+                    <div class="title" style="color: black" > traditional beauty </div>
                     <div class="description" style="color: black">agar mai usdin tere sath geya hota to mera accident pakka hota kiyuki rasta to nazar hi nehi ata mere samne🥰</div>
                     <button>See Detail</button>
                 </div>
@@ -49,7 +49,7 @@
             </div>
             <div class="item" style="background-image: url(Image/6.jpg);">
                 <div class="content">
-                    <div class="title"> hotty🫣 </div>
+                    <div class="title" style="color: black"> hotty🫣 </div>
                     <div class="description" style="color: rgb(242, 28, 142);">acha usdin aag to nehi laga tha na mall pe? kiyuki itna bada bomb jo ghusa tha mall ke andar me😉🤪</div>
                     <button>See Detail</button>
                 </div>
