--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="I.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
-    <title>Special Slider</title>
+    <title>Love Slider</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <div class="slider">
             <div class="item" style="background-image: url(Image/1.jpg);"> 
                 <div class="content">
-                    <div class="title">cutie pie</div>
+                    <div class="title">Cutie pie</div>
                     <div class="description">"I was trying to focus on the background of the cafe, but you totally stole the spotlight.😍</div>
                     <button>See Detail</button>
                 </div>
@@ -22,35 +22,35 @@
             <div class="item" style="background-image: url(Image/2.jpg);">
                 <div class="content">
                     <div class="title"> Awesome in simple</div>
-                    <div class="description">Camera bhi sharma jayegi tujhe dekhke ki kisi photo me yea kharab keyu nehi dikhti🫣</div>
+                    <div class="description" style=" font-size:18px;" >Camera bhi sharma jayegi tujhe dekhke ki kisi photo me yea kharab keyu nehi dikhti🫣</div>
                     <button>See Detail</button>
                 </div>
             </div>
             <div class="item" style="background-image: url(Image/3.jpg);">
                 <div class="content">
-                    <div class="title"> looking sassy </div>
-                    <div class="description" style="color: rgb(69, 207, 232)">light tere upar pad raha hai yea tu light ke upar?✨🌙 yea lights bhi tere se competition me har jayegi lagta hai</div>
+                    <div class="title"> looking sassy</div>
+                    <div class="description" style="color: rgb(241, 11, 11); font-size: 18px;">light tere upar pad raha hai yea tu light ke upar??✨🌙 yea lights bhi tere se competition me har jayegi lagta hai 🤪</div>
                     <button>See Detail</button>
                 </div>
             </div>
             <div class="item" style="background-image: url(Image/4.jpg);">
                 <div class="content">
-                    <div class="title" style="color: black" > traditional beauty </div>
+                    <div class="title" style="color: black" > traditional beauty</div>
                     <div class="description" style="color: black">agar mai usdin tere sath geya hota to mera accident pakka hota kiyuki rasta to nazar hi nehi ata mere samne🥰</div>
                     <button>See Detail</button>
                 </div>
             </div>
             <div class="item" style="background-image: url(Image/5.jpg);">
                 <div class="content">
-                    <div class="title"> Sweetest </div>
+                    <div class="title"> Sweetest</div>
                     <div class="description">us din sugar ka packet bekar me hi liya tha teri ek ungli hi kafi tha lagta hai pura coffee ko sweet banane ke liye😁</div>
                     <button>See Detail</button>
                 </div>
             </div>
             <div class="item" style="background-image: url(Image/6.jpg);">
                 <div class="content">
-                    <div class="title" style="color: black"> hotty🫣 </div>
-                    <div class="description" style="color: rgb(242, 28, 142);">acha usdin aag to nehi laga tha na mall pe? kiyuki itna bada bomb jo ghusa tha mall ke andar me😉🤪</div>
+                    <div class="title" style="color: black"> hotty🫣</div>
+                    <div class="description" style="color: rgb(242, 28, 142); font-size: 18px;">acha usdin aag to nehi laga tha na mall pe? kiyuki itna bada bomb jo ghusa tha mall ke andar me😉🤪</div>
                     <button>See Detail</button>
                 </div>
             </div>
