--- a/index.html
+++ b/index.html
@@ -6,48 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="I.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
-    <title>Love Slider</title>
+    <title>Special Slider</title>
 </head>
 
 <body>
     <div class="container">
         <div class="slider">
-            <div class="item" style="background-image: url(Image/1.jpg);"> 
+            <div class="item" style="background-image: url(Image/1.jpg);">
                 <div class="content">
-                    <div class="title">Cutie pie</div>
-                    <div class="description">"I was trying to focus on the background of the cafe, but you totally stole the spotlight.😍</div>
+                    <div class="title" style="color: black"> Sorry yaar whatever i do😟</div>
+                    <div class="description" style="color: white; font-size: 16px;">if you are angry with me discuss the matter scold me fight with me but don't stop replying because this kills more from inside.😫</div>
                     <button>See Detail</button>
                 </div>
             </div>
-            <div class="item" style="background-image: url(Image/2.jpg);">
+            <div class="item" style="background-image: url(Image/2.jpg);"> 
                 <div class="content">
-                    <div class="title"> Awesome in simple</div>
-                    <div class="description" style=" font-size:18px;" >Camera bhi sharma jayegi tujhe dekhke ki kisi photo me yea kharab keyu nehi dikhti🫣</div>
+                    <div class="title">Cutie pie</div>
+                    <div class="description" style= "color:white;" font-size:17px;"  >"I was trying to focus on the background of the cafe, but you totally stole the spotlight.😍</div>
                     <button>See Detail</button>
                 </div>
             </div>
             <div class="item" style="background-image: url(Image/3.jpg);">
                 <div class="content">
-                    <div class="title"> looking sassy</div>
-                    <div class="description" style="color: rgb(241, 11, 11); font-size: 18px;">light tere upar pad raha hai yea tu light ke upar??✨🌙 yea lights bhi tere se competition me har jayegi lagta hai 🤪</div>
+                    <div class="title"> Awesome in simple</div>
+                    <div class="description" style= "color:white;" font-size:19px;" >Camera bhi sharma jayegi tujhe dekhke ki kisi photo me yea kharab keyu nehi dikhti🫣</div>
                     <button>See Detail</button>
                 </div>
             </div>
             <div class="item" style="background-image: url(Image/4.jpg);">
                 <div class="content">
-                    <div class="title" style="color: black" > traditional beauty</div>
-                    <div class="description" style="color: black">agar mai usdin tere sath geya hota to mera accident pakka hota kiyuki rasta to nazar hi nehi ata mere samne🥰</div>
+                    <div class="title"> looking sassy</div>
+                    <div class="description" style="color:white; font-size: 16px;">light tere upar pad raha hai yea tu light ke upar??✨🌙 yea lights bhi tere se competition me har jayegi lagta hai 🤪</div>
                     <button>See Detail</button>
                 </div>
             </div>
             <div class="item" style="background-image: url(Image/5.jpg);">
                 <div class="content">
-                    <div class="title"> Sweetest</div>
-                    <div class="description">us din sugar ka packet bekar me hi liya tha teri ek ungli hi kafi tha lagta hai pura coffee ko sweet banane ke liye😁</div>
+                    <div class="title" style="color: black" > traditional beauty</div>
+                    <div class="description" style="color: black; font-size:18px;">agar mai usdin tere sath geya hota to mera accident pakka hota kiyuki rasta to nazar hi nehi ata mere samne🥰</div>
                     <button>See Detail</button>
                 </div>
             </div>
             <div class="item" style="background-image: url(Image/6.jpg);">
+                <div class="content">
+                    <div class="title"> Sweetest</div>
+                    <div class="description" style="font-size:18px;">us din sugar ka packet bekar me hi liya tha teri ek ungli hi kafi tha lagta hai pura coffee ko sweet banane ke liye😁</div>
+                    <button>See Detail</button>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(Image/7.jpg);">
                 <div class="content">
                     <div class="title" style="color: black"> hotty🫣</div>
                     <div class="description" style="color: rgb(242, 28, 142); font-size: 18px;">acha usdin aag to nehi laga tha na mall pe? kiyuki itna bada bomb jo ghusa tha mall ke andar me😉🤪</div>
